--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "rspack preview"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@rspack/cli": "^1.6.3",
